--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="https://image.flaticon.com/icons/svg/480/480996.svg">
+
   <title>TinDog</title>
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/0a0ece7936.js" crossorigin="anonymous"></script>
